<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/showAlphabet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/alphabetDescription"
                android:onClick="openAlphabetActivity"
                android:text="@string/alphabet"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:contentDescription="@string/charactersExercisesDescription"
                android:onClick="openCharactersExercises"
                android:text="@string/charactersExercises"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:contentDescription="@string/wordExercisesDescription"
                android:onClick="openWordExercises"
                android:text="@string/wordExercises"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:contentDescription="@string/numbersExercisesDescription"
                android:onClick="openNumbersExercises"
                android:text="@string/numbersExercises"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:contentDescription="@string/phraseExercisesDescription"
                android:onClick="openPhraseExercises"
                android:text="@string/phraseExercises"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:padding="5dp"
                android:contentDescription="@string/cheatSheetDescription"
                android:onClick="openBrailleCheatSheetAppOnGooglePlay"
                android:text="@string/cheatSheet"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:text="@string/sloganParagraph"
                android:textIsSelectable="true"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:text="@string/privacyPolicyShortParagraph"
                android:textIsSelectable="true"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:text="@string/mainParagraph"
                android:textIsSelectable="true"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:text="@string/helpParagraph"
                android:textIsSelectable="true"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:focusable="false"
                android:padding="10dp"
                android:paddingTop="20dp"
                android:text="@string/licenseParagraph"
                android:textIsSelectable="true"
                android:textSize="18dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>