<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/actionAlphabet" android:title="@string/actionAlphabet"
        android:orderInCategory="10"
        app:showAsAction="never" />
    <item android:id="@+id/actionSettings" android:title="@string/actionSettings"
        android:orderInCategory="20"
        app:showAsAction="never" />
    <item android:id="@+id/actionHelp" android:title="@string/actionHelp"
        android:orderInCategory="30"
        app:showAsAction="never" />
    <item android:id="@+id/fontTest" android:title="@string/fontTest"
        android:orderInCategory="40" app:showAsAction="never" />

</menu>
