<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.comoelagua.android.braille.PhraseExercisesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/wordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phrase_label" />

        <TextView android:id="@+id/askNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="290dp"
            android:lines="5"
            android:scrollIndicators="right"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/ask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="20dp"
                android:text="@string/phraseExample"
                android:textSize="48dp"
             />

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="192dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:contentDescription="@string/answerDescription"
            android:ems="3"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:scrollbars="vertical"
         />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@color/nextButton"
            android:contentDescription="@string/nextDescription"
            android:text="@string/next" />

    </LinearLayout>



</LinearLayout>
